submodules/vpc.template
---
AWSTemplateFormatVersion: '2010-09-09'
Description: This template creates a Multi-AZ, multi-subnet
  VPC infrastructure.**WARNING** This template creates AWS
  resources. You will be billed for the AWS resources used
  if you create a stack from this template.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Network Configuration
      Parameters:
      - AZForSubnet1
      - AZForSubnet2
      - VPCCIDR
      - Public1Subnet
      - Public2Subnet
      - Private1Subnet
      - Private2Subnet
    ParameterLabels:
      AZForSubnet1:
        default: Availability Zone 1
      AZForSubnet2:
        default: Availability Zone 2
      VPCCIDR:
        default: VPC CIDR
      Public1Subnet:
        default: Public Subnet 1
      Public2Subnet:
        default: Public Subnet 2
      Private1Subnet:
        default: Private Subnet 1
      Private2Subnet:
        default: Private Subnet 2
Parameters:
  AZForSubnet1:
    Description: Availability Zone 1 to use for the subnets in the VPC.
    Type: AWS::EC2::AvailabilityZone::Name
  AZForSubnet2:
    Description: Availability Zone 2 to use for the subnets in the VPC.
    Type: AWS::EC2::AvailabilityZone::Name
  VPCCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: '10.0.0.0/16'
    Description: CIDR Block of the VPC
    Type: String
  Public1Subnet:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: '10.0.128.0/20'
    Description: CIDR Block for the public subnet 1 located in Availability Zone 1
    Type: String
  Public2Subnet:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: '10.0.144.0/20'
    Description: CIDR Block for the public subnet 2 located in Availability Zone 2
    Type: String
  Private1Subnet:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: '10.0.0.0/19'
    Description: CIDR block for private subnet 1 located in Availability Zone 1
    Type: String
  Private2Subnet:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: '10.0.32.0/19'
    Description: CIDR block for private subnet 2 located in Availability Zone 2
    Type: String
Resources:
  VPCID:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VPCCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-VPCID"
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock:
        Ref: Public1Subnet
      AvailabilityZone:
        Ref: AZForSubnet1
      MapPublicIpOnLaunch: 'true'
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PublicSubnet1"
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock:
        Ref: Private1Subnet
      AvailabilityZone:
        Ref: AZForSubnet1
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PrivateSubnet2"
  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock:
        Ref: Public2Subnet
      AvailabilityZone:
        Ref: AZForSubnet2
      MapPublicIpOnLaunch: 'true'
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PublicSubnet3"
  Subnet4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCID
      CidrBlock:
        Ref: Private2Subnet
      AvailabilityZone:
        Ref: AZForSubnet2
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PrivateSubnet4"
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCID
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PublicRT"
  RouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCID
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-InternalRouteTable1"
  RouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCID
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-InternalRouteTable2"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-IGW"
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCID
      InternetGatewayId:
        Ref: InternetGateway
  Route1:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  Route2:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: RouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  Route3:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: RouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet1
      RouteTableId:
        Ref: RouteTable
  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet3
      RouteTableId:
        Ref: RouteTable
  SubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet2
      RouteTableId:
        Ref: RouteTable1
  SubnetRouteTableAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet4
      RouteTableId:
        Ref: RouteTable2
Outputs:
  VPCID:
    Value:
      Ref: VPCID
    Description: VPC ID
  SubnetID1:
    Value:
      Ref: Subnet1
    Description: Subnet ID of Public Subnet 1
  SubnetID2:
    Value:
      Ref: Subnet2
    Description: Subnet ID of Private Subnet 1
  SubnetID3:
    Value:
      Ref: Subnet3
    Description: Subnet ID of Public Subnet 2
  SubnetID4:
    Value:
      Ref: Subnet4
    Description: Subnet ID of Private Subnet 2
  AZ1:
    Value:
      Ref: AZForSubnet1
    Description: AZ of Subnet 1
  AZ2:
    Value:
      Ref: AZForSubnet2
    Description: AZ of Subnet 2
